# crawlit

./: .env.example  .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLI_FEATURES.md  CODEBASE_REVIEW.md  ENGINEERING_AUDIT.md  LICENSE  MANIFEST.in  PUBLISH_INSTRUCTIONS.md  README.md  RELEASE_NOTES.md  __init__.py  crawlit.py  crawlit_results.db  docker-compose.yml  output.html  publish.ps1  publish.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_fix.py  tmpclaude-5b5a-cwd
.github/ISSUE_TEMPLATE/: web-crawler-roadmap.md  week_01_learn_http_basics_&_fetch_pages_using_http.client_or_requests.md  week_02_extract_links_from_raw_html_using_regex_or_string_parsing.md  week_03_normalize_urls_and_implement_basic_crawling_with_depth_limit.md  week_04_add_visited_set_domain_restriction_and_basic_logging.md  week_05_implement_robots.txt_parser_and_respect_disallowed_paths.md  week_06_add_cli_options_for_depth_domain_output_format.md  week_07_refactor_code_split_into_modules_and_write_documentation.md  week_08_add_setup.py_readme_license_and_prep_for_pypi.md  week_09_write_tests_finalize_cli_and_publish_to_github.md  week_10_upload_to_pypi_and_announce_project.md
.github/workflows/: lint.yml  pytest.yml  quick-tests.yml
crawler/: engine.py  fetcher.py  robots.py
crawlit/: __init__.py  __main__.py  compat.py  config.py  content_router.py  crawlit.py  interfaces.py
crawlit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
crawlit/crawler/: __init__.py  async_engine.py  async_fetcher.py  crawler.py  engine.py  fetcher.py  js_renderer.py  parser.py  robots.py
crawlit/distributed/: __init__.py  coordinator.py  kafka_queue.py  message_queue.py  pool.py  rabbitmq_queue.py
crawlit/extractors/: __init__.py  content_extractor.py  forms.py  image_extractor.py  js_embedded_data.py  keyword_extractor.py  language.py  pdf_extractor.py  structured_data.py  tables.py
crawlit/fetchers/: __init__.py  http_fetcher.py
crawlit/models/: __init__.py  page_artifact.py
crawlit/output/: formatters.py
crawlit/parser/: __init__.py  html_parser.py  sitemap_parser.py
crawlit/pipelines/: __init__.py  artifact_store.py  blob_store.py  edges_writer.py  jsonl_writer.py
crawlit/security/: __init__.py  captcha_detector.py  csrf.py  csrf_patterns.json  headers.py  honeypot.py  waf.py  waf_signatures.json
crawlit/storage/: __init__.py  mongo_storage.py  postgres_storage.py
crawlit/utils/: __init__.py  auth.py  budget_tracker.py  cache.py  content_hash_store.py  cookie_persistence.py  database.py  deduplication.py  download_manager.py  env_loader.py  errors.py  event_log.py  incremental.py  logging_config.py  priority_queue.py  progress.py  proxy_manager.py  queue_manager.py  rate_limiter.py  scheduler.py  session_manager.py  sitemap.py  storage.py  url_filter.py
docs/: README.md  api-reference.md  async-crawling.md  authentication-and-proxies.md  cli-reference.md  cli_usage.md  conf.py  configuration.md  content_extractor.md  contributing.rst  database-integration.md  distributed-crawling.md  examples.rst  extractors.md  getting-started.md  index.md  index.rst  javascript-rendering.md  models.md  open_docs.py  pipelines.md  plugins.md  quickstart.rst  rate-limiting-and-budgets.md  response_interface.md  security.md  usage.rst
docs/_build/html/: .buildinfo  changelog.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  usage.doctree
docs/_build/html/.doctrees/api/: cli.doctree  crawler.doctree  index.doctree  output.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: changelog.rst.txt  examples.rst.txt  installation.rst.txt
docs/_build/html/api/: cli.html  crawler.html  index.html  output.html
docs/api/: cli.rst  extractors.rst  index.rst
examples/: README.md  advanced_extraction_demo.py  advanced_table_extraction_all_depths.py  auth_example.py  compare_crawl_performance.py  crawlit_examples.bat  crawlit_examples.sh  database_availability_check.py  database_integration.py  distributed_crawling_example.py  enhanced_table_extraction.py  env_config_example.py  extraction_coverage_demo.py  image_extraction.py  javascript_rendering.py  keyword_extraction.py  programmatic_results.csv  programmatic_usage.py  proxy_usage_example.py  rowspan_colspan_example.py  security_demo.py  table_extraction.py  test_multi_depth.py
output/: __init__.py  formatters.py
tests/: README.md  __init__.py  configure_logging.py  conftest.py  test_advanced_extraction.py  test_async_engine.py  test_async_fetcher.py  test_auth.py  test_authentication.py  test_budget_tracker.py  test_cache.py  test_captcha_detector.py  test_cli.py  test_compat.py  test_config.py  test_content_extractor.py  test_content_router.py  test_cookie_persistence.py  test_crawl_scheduler.py  test_crawlit_cli.py  test_database.py  test_database_integration.py  test_deduplication.py  test_distributed.py  test_distributed_simple.py  test_download_manager.py  test_edge_cases.py  test_engine.py  test_env_loader.py  test_exponential_backoff.py  test_extractors.py  test_fetcher.py  test_formatters.py  test_html_formatter_xss.py  test_image_extractor.py  test_incremental_crawling.py  test_incremental_state.py  test_integrated_features.py  test_integration.py  test_interfaces.py  (+28 more)
tests/integration/: test_distributed_crawling.py  test_end_to_end.py  test_javascript_rendering.py
tests/performance/: __init__.py  test_benchmarks.py
(+9 files in other folders)
