[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlit"
version = "0.2.0"
description = "Modular, Ethical Python Web Crawler"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Swayam Dani", email = "swayamdani@swayamdani.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/SwayamDani/crawlit"
"Bug Tracker" = "https://github.com/SwayamDani/crawlit/issues"
"Documentation" = "https://github.com/SwayamDani/crawlit/tree/main/docs"

[project.optional-dependencies]
cli = []  # No extra dependencies needed for CLI, but keeps it optional

[project.scripts]
crawlit = "crawlit.crawlit:main"

[tool.setuptools]
packages = ["crawlit", "crawlit.crawler", "crawlit.output", "crawlit.extractors"]
include-package-data = true