[build-system]
requires = ["setuptools>=61.0.0,<69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlit"
version = "0.2.0"
description = "Modular, Ethical Python Web Crawler"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Swayam Dani", email = "swayamdani@swayamdani.com"}
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "html5lib>=1.1",
    "nltk>=3.6.0",
    "beautifulsoup4>=4.9.0",
]

[project.urls]
"Homepage" = "https://github.com/SwayamDani/crawlit"
"Bug Tracker" = "https://github.com/SwayamDani/crawlit/issues"
"Documentation" = "https://github.com/SwayamDani/crawlit/tree/main/docs"

[project.optional-dependencies]
cli = []  # No extra dependencies needed for CLI, but keeps it optional

[project.scripts]
crawlit = "crawlit:cli_main"

[tool.setuptools]
packages = ["crawlit", "crawlit.crawler", "crawlit.output", "crawlit.extractors", "crawlit.utils"]
include-package-data = true